--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,14 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
 
 	// json-simple dependency used to parse json objects in application.
-	compile 'com.googlecode.json-simple:json-simple:1.1.1'
+	//compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
-    compile 'javax.mail:javax.mail-api:1.6.2'
+    //compile 'javax.mail:javax.mail-api:1.6.2'
+    implementation 'javax.mail:javax.mail-api:1.6.2'
 
-    compile 'com.sun.mail:javax.mail:1.6.2'
+    //compile 'com.sun.mail:javax.mail:1.6.2'
+    implementation 'com.sun.mail:javax.mail:1.6.2'
 }
 
 application {
